--- a/style.css
+++ b/style.css
@@ -1,4 +1,187 @@
-h1 {
+body {
 
-    color:red;
+    margin:0;
+}
+
+.header {
+
+    float:right;
+ 
+}
+
+.header ul {
+    position:relative;
+    padding-right:20px;
+    right:50px;
+    top:5px;
+    float:left;
+
+    font-family: arial,sans-serif;
+    font-size:0.9em;
+}
+
+.header li{
+
+    list-style:none;
+    float:left;
+    padding:10px 8px 10px 10px;
+
+}
+
+.header a {
+
+    text-decoration:none;
+    color:black;
+}
+
+.header a:hover{
+
+    text-decoration:underline;
+}
+
+.header img {
+    position:relative;
+    float:left;
+
+    top:24px;
+    right:60px;
+
+}
+
+#signin {
+
+    top:18px;
+    padding-left:10px;
+}
+
+#center_content {
+
+    padding:0;
+    margin:0 auto;
+    width:10%;
+    padding-top:12%;
+
+}
+
+#center_content input{
+
+    position:relative;
+    height:35px;
+    width:565px;
+    left:-200px;
+
+    font-size:1.3em;
+    font-family: arial,sans-serif;
+
+    border: 1px solid #d9d9d9;
+
+    background-image:url("images/microphone-icon.jpg");
+    background-repeat:no-repeat;
+    background-size:4%;
+    background-position:center right;
+    padding-left:10px;
+    padding-right:25px;
+}
+
+#center_content input:hover {
+
+    border:1px solid #808080;
+}
+
+#center_content img{
+
+    position:relative;
+    left:-85px;
+
+}
+
+.center_button {
+
+    position:relative;
+    height:36px;
+    width:124px;
+
+    left:42.5%;
+    top:50px;
+}
+
+.center_button input {
+    backface-visibility:hidden;
+    background-color:#f2f2f2;
+    border:hidden;
+    font-family:arial,sans-serif;
+    font-weight:bold;
+    font-size:13px;
+    padding:10px 18px 10px 18px;
+}
+
+.center_button input:hover {
+
+    border:1px solid #808080;
+}
+
+#search_button {
+    position:relative;
+
+}
+
+#lucky_button {
+    position:relative;
+    left:139px;
+    top:-35px;
+}
+
+.footer {
+    
+    position:relative;
+    border-top: 1px solid #e4e4e4;
+    width:100%;
+    height:40px;
+    top:467px;
+    background-color:#f2f2f2;
+
+}
+
+.footer ul {
+
+    list-style:none;
+    color:#666;
+    font-family: arial,sans-serif;
+    font-size:0.8em;
+    padding:0;
+
+}
+
+.footer li {
+
+    float:left;
+    padding:0 10px 0 10px;
+
+}
+
+.footer a {
+
+    text-decoration:none;
+    color:#666;
+
+}
+
+.footer a:hover {
+
+    text-decoration:underline;
+
+}
+
+#list_left {
+
+    float:left;
+    padding-left:20px;
+
+}
+
+#list_right {
+
+    float:right;
+    padding-right:20px;
+
 }
